Finish backend logic

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -14,5 +14,8 @@
   },
   "ConnectionStrings": {
     "PostgreSQLContext": "Host=it-tools-it-tools-software-design.j.aivencloud.com;Database=defaultdb;Username=avnadmin;Password=AVNS_LIAQ-mnuCnzmiW-rers;Port=24400;SSL Mode=Require;"
+  },
+  "AppSettings": {
+    "FrontendBaseUrl": "http://localhost:3000"
   }
 }
